--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ APP_CODE_PATH_CONTAINER=/var/www/html
 APP_CODE_CONTAINER_FLAG=:cached
 
 # Choose storage path on your machine. For all storage systems
-DATA_PATH_HOST=~/.laradock/data
+DATA_PATH_HOST=/d/docker_database/d_xampp_7.4.29
 
 ### Drivers ################################################
 
@@ -33,13 +33,14 @@ COMPOSE_FILE=docker-compose.yml
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names. This is useful if you have multiple projects that use laradock to have separate containers per project.
-COMPOSE_PROJECT_NAME=laradock
+COMPOSE_PROJECT_NAME=d_xampp_7.4.29
 
 ### PHP Version ###########################################
 
 # Select a PHP version of the Workspace and PHP-FPM containers (Does not apply to HHVM).
 # Accepted values: 8.2 - 8.1 - 8.0 - 7.4 - 7.3 - 7.2 - 7.1 - 7.0 - 5.6
 PHP_VERSION=7.4
+PHP_APACHE_VERSION=7.4.29
 
 ### Phalcon Version ###########################################
 
@@ -382,6 +383,7 @@ PMA_DB_ENGINE=mariadb
 PMA_USER=default
 PMA_PASSWORD=secret
 PMA_ROOT_PASSWORD=secret
+#PMA_ROOT_PASSWORD=
 PMA_PORT=8081
 PMA_MAX_EXECUTION_TIME=600
 PMA_MEMORY_LIMIT=256M
