Install composer and nvm in "php-apache" container.

--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,6 +1,40 @@
 ARG LARADOCK_PHP_VERSION
 FROM php:${LARADOCK_PHP_VERSION}-apache
 
+RUN set -eux \
+    #--------------------------------------------------------------------------
+    # Software's Installation
+    #--------------------------------------------------------------------------
+    #
+    && apt-get update \
+    #&& apt-get upgrade -y \
+    && apt-get install -y --allow-downgrades --allow-remove-essential \
+        --allow-change-held-packages \
+        rsync \
+        sqlite3 \
+        git \
+        curl \
+        vim \
+        nano \
+        tree \
+    && apt-get clean \
+    #####################################
+    # Composer:
+    #####################################
+    # Install composer and add its bin to the PATH.
+    && curl -s http://getcomposer.org/installer | php \
+    && echo "export PATH=${PATH}:/var/www/vendor/bin" >> ~/.bashrc \
+    && mv composer.phar /usr/local/bin/composer
+
+###########################################################################
+# Node / NVM:
+###########################################################################
+RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | bash \
+    && export NVM_DIR="$HOME/.nvm" \
+    && . $NVM_DIR/nvm.sh \
+    && nvm install --lts \
+    && nvm use --lts
+
 RUN pecl channel-update pecl.php.net; \
   docker-php-ext-install mysqli mbstring pdo pdo_mysql xml pcntl; \
   if [ $(php -r "echo PHP_VERSION_ID - PHP_RELEASE_VERSION;") = "80100" ] || \
@@ -9,3 +43,4 @@ RUN pecl channel-update pecl.php.net; \
   else \
     docker-php-ext-install tokenizer; \
   fi
+
