Set mariadb version 10.7 in .env file.

--- a/.env
+++ b/.env
@@ -111,7 +111,7 @@ APACHE_FOR_MAC_M1=false
 
 ### MARIADB ###############################################
 
-MARIADB_VERSION=latest
+MARIADB_VERSION=10.7
 MARIADB_DATABASE=default
 MARIADB_USER=default
 MARIADB_PASSWORD=secret
