--- a/php-apache/Dockerfile
+++ b/php-apache/Dockerfile
@@ -1,3 +1,4 @@
+ARG PHP_VERSION
 ARG LARADOCK_PHP_VERSION
 FROM php:${LARADOCK_PHP_VERSION}-apache
 
@@ -24,7 +25,6 @@ RUN set -eux \
     #####################################
     # Install composer and add its bin to the PATH.
     && curl -s http://getcomposer.org/installer | php \
-    && echo "export PATH=${PATH}:/var/www/vendor/bin" >> ~/.bashrc \
     && mv composer.phar /usr/local/bin/composer
 
 ###########################################################################
@@ -36,10 +36,27 @@ RUN curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.3/install.sh | b
     && nvm install --lts \
     && nvm use --lts
 
+###########################################################################
+# [PHP Extensions](https://github.com/mlocati/docker-php-extension-installer)
+###########################################################################
+
 RUN pecl channel-update pecl.php.net; \
   docker-php-ext-install mysqli pdo_mysql gd zip; \
   docker-php-ext-configure zip; \
   docker-php-ext-enable pdo_mysql gd zip;
+
+RUN pecl install xdebug; \
+  cd /usr/local/etc/php && \
+  cp php.ini-development php.ini && \
+  echo '[xdebug]' >> php.ini && \
+  echo 'zend_extension=/usr/local/lib/php/extensions/no-debug-non-zts-20220829/xdebug.so' >> php.ini && \
+  echo 'xdebug.mode=debug' >> php.ini && \
+  echo 'xdebug.start_with_request=yes' >> php.ini && \
+  echo 'xdebug.client_host="host.docker.internal"' >> php.ini
+
+###########################################################################
+# Apache2 Configuration:
+###########################################################################
 
 RUN a2enmod rewrite; \
   a2enmod headers; \
